SS-106: Fix hovering over fields in dashablerecord creating a scrollbar

--- a/sugarcrm/styleguide/less/sugar/dashlets.less
+++ b/sugarcrm/styleguide/less/sugar/dashlets.less
@@ -943,6 +943,12 @@
   margin-right: 10px;
 }
 
+.dashablerecord {
+  .record {
+    padding: 13px;
+  }
+}
+
 /* Active Subscriptions Dashlet */
 .active-subscriptions {
   .subscription-entry {
